syntax = "proto3";

message EmptyValue {}